--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "install": "node build.js"
+    "install": "LD_LIBRARY_PATH=/usr/local/lib64:$LD_LIBRARY_PATH node build.js"
   },
   "dependencies": {
     "help": "^3.0.2",
